--- a/app/src/main/res/layout/activity_eye_exercises.xml
+++ b/app/src/main/res/layout/activity_eye_exercises.xml
@@ -34,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="200dp"
             android:src="@drawable/tired"
+            android:layout_marginBottom="20dp"
             />
 
         <!-- YouTube Video Section 1 -->
