--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -94,13 +94,14 @@
 
         <Button
             android:id="@+id/btn_log"
-            android:layout_width="186dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/password_log"
             android:layout_marginLeft="90dp"
             android:layout_marginTop="50dp"
             android:layout_marginRight="90dp"
             android:text="Login"
+            android:gravity="center"
             android:backgroundTint="@color/black"
             android:textColor="@color/white"
             android:textSize="16dp"
