--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,6 +68,19 @@
             android:textSize="18sp"
             android:layout_marginTop="10dp"
             android:backgroundTint="@color/black" />
+        <Button
+            android:id="@+id/button_user"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Test user"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
+            android:textColor="@color/white"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="@color/black" />
 
     </LinearLayout>
 </ScrollView>
